2008-03-26  Pedro Gracia  <pedro@flumotion.com>

	* data/glade/authenticate.glade:
	* data/glade/open-connection.glade:
	* data/glade/wizard_encoding.glade:
	* data/glade/wizard_source.glade:
	* flumotion/component/consumers/disker/disker-wizard.glade:
	* flumotion/component/consumers/httpstreamer/httpstreamer-wizard.glade:
	* flumotion/component/consumers/shout2/shout2-wizard.glade:
	* flumotion/component/encoders/jpeg/jpeg-wizard.glade:
	* flumotion/component/encoders/smoke/smoke-wizard.glade:
	* flumotion/component/producers/audiotest/audiotest-wizard.glade:
	* flumotion/component/producers/soundcard/soundcard-wizard.glade:
	* flumotion/component/producers/videotest/videotest-wizard.glade:
	  xalign property in labels and alignments changed to 0.
	  Fixes #882.

2008-03-26  Johan Dahlin  <johan@gnome.org>

	* flumotion/component/base/component.glade:
	Make all the labels in the newly added statistics tab selectable,
	as suggested by Mike.

2008-03-26  Michael Smith <msmith@fluendo.com>

	* flumotion/admin/gtk/componentview.py:
	  Don't attempt to display UI for sad components.
	  Fixes #899.

2008-03-26  Johan Dahlin  <johan@gnome.org>

	* data/cortado-template.html: 
	Add a check and redirect to www.flumotion.com/java if java is not installed.
	Fixes #887
	
2008-03-26  Johan Dahlin  <johan@gnome.org>

	* flumotion/component/consumers/httpstreamer/httpstreamer_wizard.py:
	Require multifdsink and twisted.web.
	
	* flumotion/wizard/configurationwizard.py:
	Block based on presence of missing elements
	
2008-03-26  Sebastien Merle  <sebastien@fluendo.com>

	reviewed by: Johan Dahlin

	* flumotion/admin/gtk/componentview.py:
	* flumotion/component/bouncers/admin_gtk.py:
	Made the NodeBook a Loggable instance.
	Made the bouncer GTK admin set the keycard title to prevent warnings.

2008-03-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/wizard/configurationwizard.py:
	  Fix typo in API.
